--- a/templates/galeria/index.html
+++ b/templates/galeria/index.html
@@ -19,7 +19,24 @@
                     <div class="cards">
                         <h2 class="cards__titulo">Navegue pela galeria</h2>
                         <ul class="cards__lista">
-                            <li class="card">
+                            {% for foto_id, info in cards.items %}
+                                <li class="card">
+                                    <a href="{% url 'imagem' %}">
+                                        <img class="card__imagem" src="{% static '/assets/imagens/galeria/carina-nebula.png' %}" alt="foto">
+                                    </a>
+                                    <span class="card__tag">Estrelas</span>
+                                    <div class="card__info">
+                                        <p class="card__titulo">{{ info.nome }}</p>
+                                        <div class="card__texto">
+                                            <p class="card__descricao">{{ info.legenda }}</p>
+                                            <span>
+                                                <img src="{% static '/assets/ícones/1x/favorite_outline.png' %}" alt="ícone de coração">
+                                            </span>
+                                        </div>
+                                    </div>
+                                </li>
+                            {% endfor %}
+                            <!-- <li class="card">
                                 <a href="{% url 'imagem' %}">
                                     <img class="card__imagem" src="{% static '/assets/imagens/galeria/carina-nebula.png' %}" alt="foto">
                                 </a>
@@ -33,8 +50,8 @@
                                         </span>
                                     </div>
                                 </div>
-                            </li>
-                            <li class="card">
+                            </li> -->
+                            <!-- <li class="card">
                                 <a href="{% url 'imagem' %}">
                                     <img class="card__imagem" src="{% static '/assets/imagens/galeria/carina-nebula.png' %}" alt="foto">
                                 </a>
@@ -48,23 +65,8 @@
                                         </span>
                                     </div>
                                 </div>
-                            </li>
-                            <li class="card">
-                                <a href="{% url 'imagem' %}">
-                                    <img class="card__imagem" src="{% static '/assets/imagens/galeria/carina-nebula.png' %}" alt="foto">
-                                </a>
-                                <span class="card__tag">Estrelas</span>
-                                <div class="card__info">
-                                    <p class="card__titulo">Nome da foto</p>
-                                    <div class="card__texto">
-                                        <p class="card__descricao">Fonte/fotógrafo/satélite</p>
-                                        <span>
-                                            <img src="{% static '/assets/ícones/1x/favorite_outline.png' %}" alt="ícone de coração">
-                                        </span>
-                                    </div>
-                                </div>
-                            </li>
-                            <li class="card">
+                            </li> -->
+                            <!-- <li class="card">
                                 <a href="{% url 'imagem' %}">
                                     <img class="card__imagem" src="{% static '/assets/imagens/galeria/carina-nebula.png' %}" alt="foto">
                                 </a>
@@ -78,8 +80,8 @@
                                         </span>
                                     </div>
                                 </div>
-                            </li>
-                            <li class="card">
+                            </li> -->
+                            <!-- <li class="card">
                                 <a href="{% url 'imagem' %}">
                                     <img class="card__imagem" src="{% static '/assets/imagens/galeria/carina-nebula.png' %}" alt="foto">
                                 </a>
@@ -93,8 +95,8 @@
                                         </span>
                                     </div>
                                 </div>
-                            </li>
-                            <li class="card">
+                            </li> -->
+                            <!-- <li class="card">
                                 <a href="{% url 'imagem' %}">
                                     <img class="card__imagem" src="{% static '/assets/imagens/galeria/carina-nebula.png' %}" alt="foto">
                                 </a>
@@ -108,7 +110,7 @@
                                         </span>
                                     </div>
                                 </div>
-                            </li>
+                            </li> -->
                         </ul>
                     </div>
                 </section>
